--- a/index.html
+++ b/index.html
@@ -1,113 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Секундомер</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+<style>
+  #timer {
+    font-size: 36px;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+</style>
 </head>
 <body>
-<style>
-body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-}
+<div>
+  <h1>Секундомер</h1>
+  <div id="timer">00:00:00</div>
+  <div>Время в часах: <span id="hours">0.00</span></div>
+  <button onclick="startTimer()">Старт</button>
+  <button onclick="stopTimer()">Стоп</button>
+  <button onclick="resetTimer()">Сбросить</button>
+</div>
 
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
+<script>
+  let startTime = 0;
+  let intervalId;
 
-.timer {
-    text-align: center;
-    margin-right: 30px;
-}
+  function startTimer() {
+    startTime = Date.now() - (startTime > 0 ? startTime : 0);
+    intervalId = setInterval(updateTimer, 1000);
+  }
 
-h1 {
-    font-size: 24px;
-}
+  function stopTimer() {
+    clearInterval(intervalId);
+  }
 
-#display1 {
-    font-size: 36px;
-    margin: 10px 0;
-}
+  function resetTimer() {
+    clearInterval(intervalId);
+    startTime = 0;
+    updateTimer();
+  }
 
-#display2 {
-    font-size: 24px;
-    color: #888;
-}
+  function updateTimer() {
+    const currentTime = Date.now() - startTime;
+    const seconds = Math.floor(currentTime / 1000) % 60;
+    const minutes = Math.floor(currentTime / 1000 / 60) % 60;
+    const hours = Math.floor(currentTime / 1000 / 60 / 60);
 
-.buttons {
-    display: flex;
-    flex-direction: column;
-}
-
-button {
-    margin: 5px;
-    padding: 10px 20px;
-    font-size: 18px;
-}
-</style>
-    <div class="container">
-        <div class="timer">
-            <h1>Секундомер</h1>
-            <div id="display1">00:00:00</div>
-            <div id="display2">0.0</div>
-        </div>
-        <div class="buttons">
-            <button id="start">Старт</button>
-            <button id="stop">Стоп</button>
-            <button id="reset">Сбросить</button>
-        </div>
-    </div>
-    <script>
-let startTime;
-let intervalId;
-let running = false;
-
-const display1 = document.getElementById('display1');
-const display2 = document.getElementById('display2');
-const startButton = document.getElementById('start');
-const stopButton = document.getElementById('stop');
-const resetButton = document.getElementById('reset');
-
-function updateDisplay() {
-    const currentTime = new Date().getTime();
-    const elapsedTime = (currentTime - startTime) / 1000;
-
-    const hours = Math.floor(elapsedTime / 3600);
-    const minutes = Math.floor((elapsedTime % 3600) / 60);
-    const seconds = Math.floor(elapsedTime % 60);
-    const hundredths = Math.floor((elapsedTime * 100) % 100); // Добавлено для отображения сотых
-
-    const decimalHours = elapsedTime / 3600;
-
-    display1.textContent = `${String(hours).padStart(2, '0')}:${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
-    display2.textContent = `${decimalHours.toFixed(1)}.${String(hundredths).padStart(2, '0')}`; // Отображение до сотых
-}
-
-startButton.addEventListener('click', () => {
-    if (!running) {
-        startTime = new Date().getTime() - (parseFloat(display2.textContent) * 3600 * 1000);
-        intervalId = setInterval(updateDisplay, 10); // Увеличено обновление до 10 миллисекунд для сотых долей
-        running = true;
-    }
-});
-
-stopButton.addEventListener('click', () => {
-    if (running) {
-        clearInterval(intervalId);
-        running = false;
-    }
-});
-
-resetButton.addEventListener('click', () => {
-    if (!running) {
-        display1.textContent = '00:00:00';
-        display2.textContent = '0.00'; // Изменено на 0.00 для сотых долей
-    }
-});
-
+    document.getElementById("timer").innerText = `${String(hours).padStart(2, "0")}:${String(minutes).padStart(2, "0")}:${String(seconds).padStart(2, "0")}`;
+    
+    // Вычисляем время в часах и обновляем его
+    const timeInHours = currentTime / 1000 / 60 / 60;
+    document.getElementById("hours").innerText = timeInHours.toFixed(2);
+  }
 </script>
 </body>
 </html>
